<resources>
    <string name="app_name">Detektor Nieoznakowanych</string>

    <string name="splash_title">DETEKTOR</string>
    <string name="splash_subtitle">nieoznakowanych</string>
    <string name="splash_loader">Uruchamianie kamery i lokalnej bazy&#8230;</string>

    <string name="status_stopped">Wstrzymane</string>

    <string name="main_speed_unit">km/h</string>
    <string name="main_initial_zero" translatable="false">0</string>
    <string name="main_initial_no_scan" translatable="false">--</string>
    <string name="main_start">Start</string>
    <string name="main_stop">Stop</string>
    <string name="main_settings">Ustawienia</string>
    <string name="main_home">Ekran główny</string>
    <string name="main_model_warmup_hint">Pierwsze uruchomienie skanowania może potrwać kilkanaście sekund. Przygotowujemy model analizy obrazu.</string>
    <string name="main_camera_preview_failed">Nie udało się uruchomić podglądu kamery.</string>
    <string name="main_stat_scans">Unikalne tablice</string>
    <string name="main_stat_alerts">Alertów</string>
    <string name="main_stat_last_scan">Ostatni skan</string>
    <string name="unique_plates_dialog_title">Unikalne tablice</string>
    <string name="unique_plates_dialog_empty">Brak wykrytych tablic w tej sesji.</string>

    <string name="service_channel_name">Detekcja podczas jazdy</string>
    <string name="service_channel_description">Skanowanie tablic i alerty podczas jazdy.</string>
    <string name="service_notification_title">Detektor działa w tle</string>
    <string name="service_notification_title_inactive">Detektor nieaktywny</string>
    <string name="service_action_stop">Zatrzymaj</string>
    <string name="service_action_battery_settings">Ustawienia baterii</string>

    <string name="alert_channel_name">Alerty wykrycia</string>
    <string name="alert_channel_description">Pilne alerty o dopasowaniu tablic do lokalnej bazy.</string>
    <string name="alert_notification_title">Wykryto potencjalny nieoznakowany pojazd</string>
    <string name="alert_notification_body">%1$s %2$s, tablica %3$s</string>
    <string name="overlay_close">Zamknij</string>
    <string name="overlay_eu_stars" translatable="false">***</string>
    <string name="overlay_country_code" translatable="false">PL</string>
    <string name="overlay_vehicle">%1$s %2$s</string>
    <string name="overlay_region">Region: %1$s</string>
    <string name="overlay_title">WYKRYTO POJAZD Z BAZY</string>
    <string name="overlay_confidence">Pewność OCR: %1$d%%</string>

    <string name="settings_title">Ustawienia</string>
    <string name="settings_alert_volume">Głośność alertu</string>
    <string name="settings_alert_volume_value">Poziom: %1$d%%</string>
    <string name="settings_vibration">Wibracja</string>
    <string name="settings_database_version">Wersja bazy: %1$s</string>
    <string name="settings_database_description">Baza jest zapisana lokalnie na telefonie i aktualizowana z Supabase. Możesz ręcznie sprawdzić, czy są dostępne nowsze rekordy.</string>
    <string name="settings_check_updates">Sprawdź aktualizacje</string>
    <string name="settings_updates_synced">Zsynchronizowano rekordy z Supabase: %1$d</string>
    <string name="settings_updates_failed">Nie udało się zsynchronizować bazy: %1$s</string>
    <string name="settings_updates_failed_unknown">nieznany błąd</string>
    <string name="settings_billing_title">Wersja beta</string>
    <string name="settings_billing_description">Korzystasz z wersji beta. Funkcje premium i płatności nie są jeszcze aktywne.</string>
    <string name="settings_billing_cta">Informacje o wersji beta</string>
    <string name="settings_billing_todo">Dziękujemy za testowanie wersji beta. Płatności zostaną dodane przed premierą.</string>

    <string name="onboarding_title">Zanim ruszysz</string>
    <string name="onboarding_subtitle">Aplikacja analizuje obraz lokalnie na telefonie. Do skanowania podczas jazdy potrzebuje kilku uprawnień. Możesz wrócić do tego ekranu później.</string>
    <string name="onboarding_permissions_title">Wymagane uprawnienia</string>
    <string name="onboarding_permissions_desc">Poprosimy tylko o dostęp potrzebny do skanowania i wyświetlania alertów. Każde uprawnienie możesz później zmienić w ustawieniach telefonu.</string>
    <string name="onboarding_permission_camera_name">Kamera</string>
    <string name="onboarding_permission_camera_desc">Rozpoznawanie tablic z obrazu tylnej kamery telefonu.</string>
    <string name="onboarding_permission_location_name">Lokalizacja GPS</string>
    <string name="onboarding_permission_location_desc">Pomiar prędkości i ograniczenie skanowania do jazdy.</string>
    <string name="onboarding_permission_overlay_name">Alert nad innymi aplikacjami</string>
    <string name="onboarding_permission_overlay_desc">Opcjonalny alert nad nawigacją. Bez niego nadal otrzymasz powiadomienie.</string>
    <string name="onboarding_permission_notifications_name">Powiadomienia</string>
    <string name="onboarding_permission_notifications_desc">Informacja o aktywnym skanowaniu i alerty o wykryciu.</string>
    <string name="onboarding_grant_permissions">Nadaj wymagane uprawnienia</string>
    <string name="onboarding_permissions_ready">Wymagane uprawnienia nadane</string>
    <string name="onboarding_permissions_granted">Wymagane uprawnienia są gotowe.</string>
    <string name="onboarding_permissions_denied_hint">Nie wszystkie zgody zostały nadane. Możesz spróbować ponownie, gdy będziesz gotowy.</string>
    <string name="onboarding_permissions_dialog_title">Dlaczego prosimy o dostęp?</string>
    <string name="onboarding_permissions_dialog_message">Kamera pozwala rozpoznawać tablice, lokalizacja pokazuje prędkość, a powiadomienia informują o pracy skanowania i alertach. Obraz jest analizowany lokalnie na telefonie.</string>
    <string name="onboarding_permissions_dialog_continue">Rozumiem, kontynuuj</string>
    <string name="onboarding_permissions_denied_title">Potrzebna jest Twoja zgoda</string>
    <string name="onboarding_permissions_denied_message">Bez wymaganych uprawnień skanowanie nie może działać. Jeśli wcześniej wybrano opcję „Nie pytaj ponownie”, włącz dostęp w ustawieniach aplikacji.</string>
    <string name="onboarding_open_app_settings">Otwórz ustawienia aplikacji</string>
    <string name="onboarding_overlay_permission">Włącz alert nad nawigacją</string>
    <string name="onboarding_overlay_ready">Alert nad nawigacją włączony</string>
    <string name="onboarding_overlay_dialog_title">Alert nad nawigacją</string>
    <string name="onboarding_overlay_dialog_message">To opcjonalna zgoda. Pozwala pokazać alert nad nawigacją, gdy aplikacja wykryje pojazd z bazy. Android otworzy osobny ekran ustawień systemowych.</string>
    <string name="onboarding_overlay_dialog_continue">Otwórz ustawienia systemowe</string>
    <string name="onboarding_battery_banner_title">Sprawdź oszczędzanie baterii</string>
    <string name="onboarding_battery_banner_body">Jeśli system ograniczy działanie aplikacji w tle, skanowanie może zatrzymać się podczas jazdy. Warto sprawdzić ustawienia baterii na swoim telefonie.</string>
    <string name="onboarding_battery_settings">Pokaż ustawienia baterii</string>
    <string name="onboarding_mode_title">Tryb skanowania</string>
    <string name="onboarding_mode_subtitle">W wersji beta aktywny jest tryb telefonu. Integracja z kamerą samochodową pojawi się w przyszłości.</string>
    <string name="onboarding_phone_mode">Kamera telefonu</string>
    <string name="onboarding_phone_mode_desc">Tylna kamera telefonu skierowana na drogę. Analiza obrazu odbywa się lokalnie na urządzeniu.</string>
    <string name="onboarding_viofo_mode">Telefon + tylna kamera Viofo</string>
    <string name="onboarding_viofo_mode_desc">Planowany tryb z dodatkowym obrazem z tylnej kamery samochodowej.</string>
    <string name="onboarding_viofo_rear_mode">Tylna kamera Viofo</string>
    <string name="onboarding_viofo_rear_mode_desc">Planowany tryb z telefonem jako sterownikiem i źródłem alertów.</string>
    <string name="onboarding_coming_soon">Wkrótce</string>
    <string name="onboarding_mode_active">Aktywny</string>
    <string name="onboarding_continue">Przejdź do trybu jazdy</string>
    <string name="onboarding_viofo_dialog_title">Integracja Viofo jest planowana</string>
    <string name="onboarding_viofo_dialog_message">W tej wersji beta działa skanowanie z tylnej kamery telefonu. Obsługę kamer samochodowych dodamy w przyszłej aktualizacji.</string>

    <string name="permission_granted">Nadano</string>
    <string name="permission_required">Wymagane</string>
    <string name="permission_overlay_optional">Opcjonalne</string>

    <string name="common_back">Wstecz</string>
    <string name="common_ok">OK</string>
    <string name="common_not_now">Nie teraz</string>
    <string name="missing_permissions_message">Nadaj wymagane uprawnienia, aby uruchomić skanowanie.</string>
</resources>
